# WiFi-STA

./: CMakeLists.txt
src/: led.c  main.c  uart.c  wifi_sta.c
src/header/: i2c.h  led.h  uart.h  wifi_sta.h
src/ssd1306/: i2c.c
